--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,11 @@
     <link rel="stylesheet" ref="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <title>React App</title>
+    <style>
+  
+  </style>
   </head>
+  
   <body class="bg-slate-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
