--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   </style>
   </head>
   
-  <body class="bg-slate-100">
+  <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
